test/expected/passthrough/1.straight/binding/mfc.yaml
apiVersion: mm.ibm.istio.io/v1
kind: MeshFedConfig
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"mm.ibm.istio.io/v1","kind":"MeshFedConfig","metadata":{"annotations":{},"labels":{"fed-config":"passthrough","secret":"cluster1"},"name":"passthrough","namespace":"passthrough"},"spec":{"ingress_gateway_port":15443,"ingress_gateway_selector":{"istio":"ingressgateway"},"mode":"Passthrough","use_egress_gateway":false,"use_ingress_gateway":true}}
  creationTimestamp: "2020-03-03T02:10:32Z"
  finalizers:
  - mm.ibm.istio.io
  generation: 2
  labels:
    fed-config: passthrough
    secret: cluster1
  name: passthrough
  namespace: passthrough
  resourceVersion: "53787565"
  selfLink: /apis/mm.ibm.istio.io/v1/namespaces/passthrough/meshfedconfigs/passthrough
  uid: 296d659b-5cf4-11ea-a6e3-d25a297f6585
spec:
  ingress_gateway_port: 15443
  ingress_gateway_selector:
    istio: ingressgateway
  mode: Passthrough
  use_ingress_gateway: true
status: {}
